# BrownianMotionInLean

./: Brownian.R  Brownian.cabal  Brownian.lean  Brownian.org  Brownian.tex  CHANGELOG.md  LICENSE  Odd.lean  README  lake-manifest.json  lakefile.lean
Brownian/: Basic.lean
Wiener_1923/: Convergence.lean
app/: Brownian.hs  Main.hs
